<resources>
    <string name="app_name">Pocket Engineer</string>

    <string name="fragment_angle_calculator">Angle Calculator Fragment</string>
    <string name="fragment_capacitor">Capacitor Fragment</string>
    <string name="fragment_db_calculator">DB Calculator Fragment</string>
    <string name="fragment_numbering_system_calculator">Numbering System Fragment</string>
    <string name="fragment_resistor_calculator">Resistor Calculator Fragment</string>

    <string name="decibel_calculator">Decibel Calculator</string>
    <string name="capacitor_calculator">Capacitor Calculator</string>
    <string name="numbering_system_calculator">Numbering System Calculator</string>
    <string name="resistor_calculator">Resistor Calculator</string>
    <string name="angle_calculator">Angle Calculator</string>

    <string name="settings_menu_about">About</string>
    <string name="settings_menu_settings">Settings</string>
    <string name="settings_menu_History">History</string>
    <string name="settings_menu_calculator">Calculator</string>
    <string name="settings_menu_variable_output">Variable Output Power</string>
    <string name="settings_menu_w_output">1W Output Power</string>
    <string name="settings_menu_resistor">Resistor</string>
    <string name="settings_menu_colors_to_resist">Colors to Resist</string>
    <string name="settings_menu_resist_to_colors">Resist to Colors</string>
    <string name="settings_menu_resistance_calculator">Resistance Calculator</string>

    <!--    db calculator-->
    <string name="wattsText">W</string>
    <string name="milli_watts_text">mW</string>
    <string name="db_text">dB</string>
    <string name="dbm_text">dBm</string>
    <string name="watts_hint">Input Watts Value</string>
    <string name="milli_watts_hint">Input Milli Watts Value</string>
    <string name="db_hint">Input dB Value</string>
    <string name="dbm_hint">Input dBm Value</string>
    <string name="output_power_hint">Input Output Power</string>
    <string name="button_convert">Convert</string>
    <string name="button_reset">Reset</string>

    <string-array name="spinner_items">
        <item>W</item>
        <item>mW</item>
        <item>dB</item>
        <item>dBm</item>
    </string-array>

    <!--    angle unit calculator-->
    <string name="degree_text">Degree</string>
    <string name="radian_text">Radian</string>
    <string name="gradient_text">Gradient</string>
    <string name="degree_hint">Input Degree Value</string>
    <string name="radian_hint">Input Radian Value</string>
    <string name="gradient_hint">Input Gradient Value</string>
    <string name="round_hint">Input Decimal Places</string>


    <!--    resistor calculator-->
    <string name="click_to_the_bottom_buttons">Click to the Bottom Buttons</string>
    <string name="_1st_digit">1st Digit</string>
    <string name="multiplier">Multiplier</string>
    <string name="tolerance">Tolerance</string>
    <string name="_2nd_digit">2nd Digit</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>

    <string name="x_1">10⁰</string>
    <string name="x_10">10¹</string>
    <string name="x_100">10²</string>
    <string name="x_1k">10³</string>
    <string name="x_10k">10⁴</string>
    <string name="x_100k">10⁵</string>
    <string name="x_1m">10⁶</string>
    <string name="x_10m">10⁷</string>
    <string name="x_0_1">10⁻¹</string>
    <string name="x_0_01">10⁻²</string>

    <string name="percentage_1">± 1%</string>
    <string name="percentage_2">± 2%</string>
    <string name="percentage_05">± 0.5%</string>
    <string name="percentage_025">± 0.25%</string>
    <string name="percentage_010">± 0.10%</string>
    <string name="percentage_005">± 0.05%</string>
    <string name="percentage_5">± 5%</string>
    <string name="percentage_10">± 10%</string>
    <string name="enter_resist_hint">Input Resist Value</string>
    <string name="calculate">Calculate</string>
    <string-array name="spinner_resistor_values">
        <item>Ω</item>
        <item>kΩ</item>
        <item>MΩ</item>
    </string-array>
    <string name="r1">R1</string>
    <string name="r2">R2</string>

    <string name="enter_number_to_convert">Input Number to Convert</string>
    <string name="from">From base: </string>
    <string name="in">In base: </string>
    <string-array name="spinner_num_sys_calculator">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>16</item>
    </string-array>

    <string name="capacitor_1">Input C1 Value</string>
    <string name="capacitor_2">Input C2 Value</string>
    <string name="serial">Serial </string>
    <string name="parallel">Parallel </string>
    <string-array name="spinner_capacitor_units">
        <item>F</item>
        <item>mF</item>
        <item>μF</item>
        <item>nF</item>
        <item>pF</item>
    </string-array>


</resources>
