<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings_about"
        android:title="@string/settings_menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_settings"
        android:title="@string/settings_menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_history"
        android:title="@string/settings_menu_History"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_variable_output_power"
        android:title="@string/settings_menu_variable_output"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_w_output_power"
        android:title="@string/settings_menu_w_output"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_resist_to_color"
        android:title="@string/settings_menu_colors_to_resist"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_color_to_resist"
        android:title="@string/settings_menu_resist_to_colors"
        app:showAsAction="never" />

</menu>