<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/angle_calculator"
        android:icon="@drawable/angle_icon"
        android:title="@string/angle_calculator" />

    <item
        android:id="@+id/capacitor_calculator"
        android:icon="@drawable/capacitor_icon"
        android:title="@string/capacitor_calculator" />

    <item
        android:id="@+id/numbering_system_calculator"
        android:icon="@drawable/number_system_cal"
        android:title="@string/numbering_system_calculator" />

    <item
        android:id="@+id/decibel_calculator"
        android:icon="@drawable/db_cal"
        android:title="@string/decibel_calculator" />


    <item
        android:id="@+id/resistor_calculator"
        android:icon="@drawable/resistor_icon"
        android:title="@string/resistor_calculator" />

</menu>