<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dbcalculator.WOutputPower"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/watsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/wattsText"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/wattsEditText"
        app:layout_constraintEnd_toStartOf="@+id/wattsEditText" />

    <TextView
        android:id="@+id/milliWatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milli_watts_ext"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/milliWattsEditText"
        app:layout_constraintEnd_toEndOf="@+id/watsText" />

    <TextView
        android:id="@+id/dbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_text"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/dbEditText"
        app:layout_constraintEnd_toEndOf="@+id/milliWatsText" />

    <TextView
        android:id="@+id/dBmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbm_text"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/dbmEditText"
        app:layout_constraintEnd_toEndOf="@+id/dbText" />

    <EditText
        android:id="@+id/wattsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/watts_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/wButton"
        app:layout_constraintEnd_toStartOf="@+id/wButton" />

    <EditText
        android:id="@+id/milliWattsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/milli_watts_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mwButton"
        app:layout_constraintEnd_toEndOf="@+id/wattsEditText" />

    <EditText
        android:id="@+id/dbEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/db_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dbButton"
        app:layout_constraintEnd_toEndOf="@+id/milliWattsEditText" />

    <EditText
        android:id="@+id/dbmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dbm_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dbmButton"
        app:layout_constraintEnd_toEndOf="@+id/dbEditText" />

    <Button
        android:id="@+id/wButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_convert"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_convert"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/wButton"
        app:layout_constraintTop_toBottomOf="@+id/wButton" />

    <Button
        android:id="@+id/dbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_convert"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/mwButton"
        app:layout_constraintTop_toBottomOf="@+id/mwButton" />

    <Button
        android:id="@+id/dbmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_convert"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/dbButton"
        app:layout_constraintTop_toBottomOf="@+id/dbButton" />

    <Button
        android:id="@+id/resetPowerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_reset"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/dbmButton"
        app:layout_constraintTop_toBottomOf="@+id/dbmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>