<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_numbering_system_cal"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/number_to_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:digits="0123456789ABCDEFabcdef"
        android:ems="10"
        android:hint="@string/enter_number_to_convert"
        android:inputType="textNoSuggestions"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_numbering_system_cal"
        tools:ignore="TextFields" />

    <Spinner
        android:id="@+id/spinner_from_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/number_to_convert"
        app:layout_constraintTop_toBottomOf="@+id/number_to_convert" />

    <Spinner
        android:id="@+id/spinner_in_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_from_base"
        app:layout_constraintTop_toBottomOf="@+id/spinner_from_base" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_from_base"
        app:layout_constraintStart_toStartOf="@+id/number_to_convert"
        app:layout_constraintTop_toTopOf="@+id/spinner_from_base" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_in_base"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/spinner_in_base" />

    <Button
        android:id="@+id/button_convert_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_convert"
        app:layout_constraintEnd_toEndOf="@+id/number_to_convert"
        app:layout_constraintStart_toStartOf="@+id/number_to_convert"
        app:layout_constraintTop_toBottomOf="@+id/spinner_in_base" />

    <TextView
        android:id="@+id/num_sys_cal_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button_num_sys_calc_reset"
        app:layout_constraintStart_toStartOf="@+id/button_num_sys_calc_reset"
        app:layout_constraintTop_toBottomOf="@+id/button_num_sys_calc_reset"
        tools:text="Result" />

    <Button
        android:id="@+id/button_num_sys_calc_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_reset"
        app:layout_constraintEnd_toEndOf="@+id/button_convert_number"
        app:layout_constraintStart_toStartOf="@+id/button_convert_number"
        app:layout_constraintTop_toBottomOf="@+id/button_convert_number" />
</androidx.constraintlayout.widget.ConstraintLayout>