<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_capacitor"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_capacitor">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:text="@string/degree_text"
            android:textColor="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <EditText
            android:id="@+id/degreeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/degree_hint"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="10"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <Button
            android:id="@+id/degreeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:background="@drawable/grey_button"
            android:text="@string/button_convert"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:text="@string/radian_text"
            android:textColor="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <EditText
            android:id="@+id/radianEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/radian_hint"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="10"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <Button
            android:id="@+id/radianButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:background="@drawable/grey_button"
            android:text="@string/button_convert"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:text="@string/gradient_text"
            android:textColor="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <EditText
            android:id="@+id/gradientEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/gradient_hint"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="10"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <Button
            android:id="@+id/gradientButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:background="@drawable/grey_button"
            android:text="@string/button_convert"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="74" />

        <Button
            android:id="@+id/resetAngleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="22"
            android:background="@drawable/red_button"
            android:text="@string/button_reset"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>